[NOBUG] Fixing Midbar Positioning and Spacing

--- a/public/css/headerfooter.less
+++ b/public/css/headerfooter.less
@@ -431,6 +431,13 @@
   }
 }
 
+#index {
+  .ui-wrapper {
+    width: 100%;
+    padding: 0 20px;
+  }
+}
+
 #midbar {
   position: relative;
   z-index: 3;
@@ -438,7 +445,6 @@
   label, .filter-bar {
     display: block;
   }
-
 }
 
 footer {
